--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "deps/meta-cmake"]
 	path = deps/meta-cmake
-	url = https://github.com/meta-toolkit/meta-cmake.git
+	url = https://github.com/JinaJita/meta-cmake.git
